--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>ECD - Angular App</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>ECD - Angular App</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@ag-grid-community/core@27.3.0/dist/styles/ag-grid.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@ag-grid-community/core@27.3.0/dist/styles/ag-theme-alpine.css"
+    />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
